스타일시트 및 자바스크립트 enqueue

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "assets"
   ],
   "dependencies": {
+    "jquery": "1.11.3",
     "bootstrap": "3.3.5",
     "fontawesome": "4.4.0",
     "modernizr": "2.8.3",
