--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "keymirror": "^0.1.1",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
+    "raven-js": "^3.17.0",
     "react": "^15.6.1",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
